# budgie-web

./: Cargo.toml  README.md  create.sql
src/: consts.rs  main.rs
src/routes/: account.rs  fund_source.rs  mod.rs  transaction.rs  user.rs
static/: style.css
templates/: index.html
