[package]
name = "budgie-web"
version = "0.1.0"
authors = ["jude <judewrs@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2"
tera = "1.0"
actix-rt = "1.0.0"
actix-http = "1.0.1"
actix-files = "0.2.1"
sqlx = { version = "0.3", features = ["mysql"] }
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
hex = "0.3"
dotenv = "0.15"
paseto = "1.0.7"
