[package]
name = "budgie-web"
version = "0.1.0"
authors = ["jude <judewrs@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
actix-http = "2.0.0"
actix-files = "0.3.0"
actix-session = "0.4.0"

tera = "1.0"

sqlx = { version = "0.3", features = ["mysql", "chrono", "bigdecimal"] }

sha2 = "0.9"
hex = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15"

chrono = { version = "0.4.19", features = ["serde"] }

bigdecimal = { version = "0.1.2", features = ["serde"] }
